# TraceLogPass

./: CMakeLists.txt  Issues.md  ReadMe.md  library.cpp  library.h
testcases/testcase1/: test.c
testcases/testcase2/: test.c
